# Smeagol_apk

./: .env.example  .gitignore  .gitmodules  README.md  bootstrap.sh  gremlin  install-all.sh  main.py  requirements.txt  settings.gradle.kts  setup.sh  smeagol
.github/workflows/: android-build.yml  ci.yml
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: hologram.html
android/app/src/main/cpp/: CMakeLists.txt  gremlin_llama.cpp
android/app/src/main/java/com/gremlin/app/: GremlinClient.kt  MainActivity.kt  ModelSettingsActivity.kt  SettingsActivity.kt
android/app/src/main/java/com/smeagol/app/: SettingsActivity.kt  SmeagolClient.kt
android/app/src/main/res/layout/: activity_main.xml  activity_model_settings.xml  activity_settings.xml
android/app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: hologram.html
app/src/main/java/com/smeagol/app/: MainActivity.kt  SettingsActivity.kt  SmeagolClient.kt
app/src/main/res/layout/: activity_main.xml  activity_settings.xml
app/src/main/res/values/: colors.xml  strings.xml
config/: models.yaml
deploy/: gremlin-update.service  gremlin-update.sh  gremlin-update.timer  gremlin.service  smeagol.service
gremlin_core/: away_sync.py  claude_override.py  consult.py  eviction.py  finetune.py  hf_hub.py  model_scan.py  mutation_log.py  persona.py  process_lock.py  registry.py  review.py  root_exec.py  router.py  sandbox.py  script_edit.py  self_improve.py  server.py  snapshots.py  status.py  teacher.py  update_check.py
gremlin_core/backends/: anthropic_backend.py  base.py  gemini_backend.py  llamacpp_backend.py  openai_backend.py
gui/: app.py
gui/assets/: main.html  model-settings.html  settings.html
smeagol_core/: away_sync.py  consult.py  model_scan.py  mutation_log.py  persona.py  process_lock.py  registry.py  review.py  sandbox.py  script_edit.py  self_improve.py  server.py  status.py
(+3 files in other folders)
